--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "felint",
+  "name": "specification",
   "version": "0.0.1",
-  "description": "felint",
+  "description": "specification",
   "license": "Apache-2.0",
   "main": "index.js",
   "scripts": {
